Fix visible icon's(is not rendering two icon only one) but not fixed post

--- a/css/movetext.css
+++ b/css/movetext.css
@@ -261,11 +261,9 @@ html {
 }
 
 .avatar-full {
-    border-radius: 50%;
-    /*width: 7rem;*/
+    height: 9rem;
+    border-radius: 25%;
     display: flex;
-    /*align-items: center;*/
-    /*justify-content: center;*/
     color: #ffffff;
 }
 
